# nginx-work

./: .gitignore  README.md  nginx-build.sh
conf/: backend.conf  nginx.conf
module/: a.out  ascii.c  ascii.out  c++test.c  c++test.h  c++test.hpp.gch  cmain  cppsub.cpp  hexdump.c  test.cpp  test.out
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/: kc.hpp  lock.hpp  transaction.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/detail/: debug.hpp  dpdk_hash_map.hpp  dpdk_hash_set.hpp  hash.hpp  mmap_journal.hpp  pipes.hpp  span.hpp  str.hpp  unique_id.hpp  unique_ptr.hpp  variant.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/system/: hook.hpp  hook_context.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/transaction/: state.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/types/: peer.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/types/detail/: aggregator.hpp  aggregator_types.h  header.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/types/request/: request.hpp  request_query.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/include/proxy/types/response/: enqueue_result.hpp  response.hpp  response_body.hpp  response_data.hpp  result.hpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/src/detail/: hook.cpp  str.cpp  unique_id.cpp
nginx/nginx/1.21.6/nginx-1.21.6/src/transaction/src/types/response/: enqueue_result.cpp  response_body.cpp
packets/: test1.cap  test2.cap  test3.cap  test4.cap
stream/: ngx_stream_handler.c  (+1 more)
(+62 files in other folders)
